# taskManager

./: Cargo.toml
src/: cursor.rs  logic.rs  main.rs
src/logic/: addTaskView.rs  functions.rs  taskView.rs
