[package]
name = "task_manager"
version = "0.1.0"
authors = ["ryota-kita <ryota-kita@kke.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
clap = "2"
csv = "1.1"
chrono = { Version = "0.4",  features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"]}
